<resources>
    <string name="app_name">GGL - Controle de Abastecimento</string>
    <string name="title_activity_fuel_register_form">Cadastro de Abastecimento</string>
    <string name="fuel_register_quantity">Qtd. combustível (em litros)</string>
    <string name="fuel_register_price">Valor pago (ex.: 5,00)</string>
    <string name="save_fuel_register">Salvar registro de abastecimento</string>
    <string name="fab_description">Adicionar abastecimento</string>
    <string name="ethanol_price">Valor do Etanol, ex: 2.99</string>
    <string name="gas_price">Valor da Gasolina, ex: 5.99</string>
    <string name="travel_distance">Informe a distância em KM de sua viagem</string>
    <string name="text_efficiency">Informe a quantos km por litros seu carro faz</string>
    <string name="text_calculate">Calcular</string>
    <string name="text_best_option">Melhor opção</string>
    <string name="button_fuel_register">Controle de Abastecimento</string>
    <string name="button_price_compare">Comparação de Preços</string>
    <string name="loginTitle">Login</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Senha</string>
    <string name="btnLogin">LOGIN</string>
    <string name="registerTitle">Registrar</string>
    <string name="btnRegister">REGISTRAR</string>
    <string name="returnLogin">Voltar ao Login</string>
    <string name="returnRegister">Clique para Registrar</string>
    <string name="button_logout">LOGOUT</string>
    <string name="button_gas_prices">Preços de Gasolina</string>
</resources>