<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifsuldeminas.mch.GGL.FuelRegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/title_activity_fuel_register_form"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/medium_green"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_to_action_bar"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fuel_qtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fuel_register_quantity"
            android:minHeight="@dimen/edit_texts_height" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fuel_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fuel_register_price" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
